<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentAS"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaSeniorFragment">

    <EditText
        android:id="@+id/etNomeAS"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etDataNascAS"
        app:layout_constraintEnd_toEndOf="@+id/etDataNascAS"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etDataNascAS"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataNascAS"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/data_nasc"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/etBairroAS"
        app:layout_constraintEnd_toEndOf="@+id/etBairroAS"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etBairroAS"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAS" />

    <EditText
        android:id="@+id/etBairroAS"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/cbProblemaCardiacoAS"
        app:layout_constraintEnd_toEndOf="@+id/cbProblemaCardiacoAS"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/cbProblemaCardiacoAS"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascAS" />

    <CheckBox
        android:id="@+id/cbProblemaCardiacoAS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/problemas_cardiacos"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAS"
        app:layout_constraintEnd_toEndOf="@+id/btnCadastrarAS"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/btnCadastrarAS"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAS" />

    <Button
        android:id="@+id/btnCadastrarAS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="195dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbProblemaCardiacoAS" />

</androidx.constraintlayout.widget.ConstraintLayout>