<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentAJ"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaJovemFragment">

    <EditText
        android:id="@+id/etNomeAJ"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etDataNascAJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataNascAJ"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/data_nasc"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/etBairroAJ"
        app:layout_constraintEnd_toEndOf="@+id/etNomeAJ"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etNomeAJ"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAJ" />

    <EditText
        android:id="@+id/etBairroAJ"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etAnosPraticaAJ"
        app:layout_constraintEnd_toEndOf="@+id/etDataNascAJ"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etDataNascAJ"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascAJ" />

    <EditText
        android:id="@+id/etAnosPraticaAJ"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/anos_pratica"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAJ"
        app:layout_constraintEnd_toEndOf="@+id/etBairroAJ"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etBairroAJ"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAJ" />

    <Button
        android:id="@+id/btnCadastrarAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="178dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnosPraticaAJ" />

</androidx.constraintlayout.widget.ConstraintLayout>